@@ -1,11 +1,11 @@
 Package: rgexf
 Type: Package
 Title: An R library to build GEXF network files
-Version: 0.12.12
-Date: 2012-12-17
+Version: 0.13.01
+Date: 2013-01-04
 Author: George Vega Yon <george.vega@nodoschile.org>, Jorge Fabrega Lacoa <jorge.fabrega@nodoschile.org>
 Maintainer: George Vega Yon <george.vega@nodoschile.org>
-Description: The first R library to create GEXF graph files. Using XML library, it allows the user to easely build graph files including attributes, GEXF viz attributes (such as color, size, and position), network dynamics (edges and nodes) and edges weighting.
+Description: The first R library to create GEXF graph files. Using XML library, it allows the user to easely build/read graph files including attributes, GEXF viz attributes (such as color, size, and position), network dynamics (edges and nodes) and edges weighting.
 Depends: XML
 License: GPL (>= 3)
 LazyLoad: yes
