@@ -1,7 +1,7 @@
 \name{read.gexf}
 \alias{read.gexf}
-\title{Reads gexf file}
-\description{\code{read.gexf} reads gexf graph files and imports its elements as a gexf class object}
+\title{Reads gexf (.gexf) file}
+\description{\code{read.gexf} reads gexf graph files and imports its elements as a \code{gexf} class object}
 \usage{
 read.gexf(x)
 }
@@ -16,6 +16,9 @@ Jorge Fabrega Lacoa \email{jorge.fabrega@nodoschile.org}}
 \references{
   The GEXF project website:
   \url{http://gexf.net} 
+}
+\note{
+  By the time attributes and viz-attributes aren't supported.
 }
 \examples{
   \dontrun{
