@@ -7,7 +7,7 @@
   An R library to build GEXF graph files
 }
 \description{
-  rgexf packages provides of a collection of functions to generate GEXF and read graph files supported on GEPHI.
+  rgexf packages provides of a collection of functions to generate GEXF and read graph files supported on GEPHI (and others).
   
   It supports building dynamic graphs and adding attributes to edges and nodes, including visual attributes such as color, shape and size.
   
@@ -18,8 +18,8 @@
   \tabular{ll}{
     Package: \tab rgexf\cr
     Type: \tab Package\cr
-    Version: \tab 0.12.12\cr
-    Date: \tab 2012-12-26\cr
+    Version: \tab 0.13.01\cr
+    Date: \tab 2013-01-04\cr
     License: \tab GPL version 2 or later\cr
   }
 }
@@ -40,9 +40,15 @@ Jorge Fabrega Lacoa \email{jorge.fabrega@nodoschile.org}}
 }
 \examples{
   \dontrun{
-    demo(gexf)
-    demo(gexffull)
-    demo(gexftwitter)
+    demo(gexf) # Example of gexf command using fictional data.
+    demo(gexfattributes) # Working with attributes.
+    demo(gexfbasic) # Basic net.
+    demo(gexfdynamic) # Dynamic net.
+    demo(edge.list) # Working with edges lists.
+    demo(gexffull) # All the package.
+    demo(gexftwitter) # Example with real data of chilean twitter accounts.
+    demo(gexfdynamicandatt) # Dynamic net with static attributes.
+    demo(gexfbuildfromscratch) # Example building a net from scratch.
   }
 }
 \keyword{ package }
